--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "init-hooks-src",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "create react src template files with hooks version",
   "main": "index.js",
   "scripts": {
@@ -17,7 +17,7 @@
   ],
   "author": "camiler",
   "license": "ISC",
-  "devDependencies": {
+  "dependencies": {
     "chalk": "^2.4.2",
     "commander": "^2.20.0",
     "fs-extra": "^8.0.1",
